samples/_failures_safe/1761184129_f60bb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f10794d7.c: In function ‘main’:
./samples/SAFE/__tmp_f10794d7.c:134:9: error: expected declaration or statement at end of input
  134 |         int result_mult[rows1][cols2];
      |         ^~~
./samples/SAFE/__tmp_f10794d7.c:134:9: error: expected declaration or statement at end of input
